# mimo-tui

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PRD.md  README.md  SECURITY.md  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: release.yml  test.yml  website.yml
crates/anthropic-client/: Cargo.toml
crates/anthropic-client/src/: client.rs  error.rs  lib.rs  stream.rs  tests.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  ui.rs  wizard.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  auth.rs  config.rs  lib.rs  mcp_bridge.rs  paths.rs  region.rs  session.rs  skills_bridge.rs  usage.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: http.rs  jsonrpc.rs  lib.rs  protocol.rs  stdio.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: generic.rs  lib.rs  linux.rs  macos.rs  windows.rs  windows_impl.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: edit_file.rs  glob_tool.rs  grep_tool.rs  lib.rs  read_file.rs  registry.rs  shell.rs  task.rs  todo.rs  web_fetch.rs  write_file.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event.rs  lib.rs  render.rs
examples/mcp/: README.md  mcp.json
examples/skills/: README.md  git-commits.md  python-style.md  rust-style.md
mimo-tui-website/: index.html
mimo-tui-website/css/: style.css
mimo-tui-website/js/: main.js
npm/: README.md  install.js  package.json
website/: astro.config.mjs  package-lock.json  package.json
website/public/: install.sh
website/src/components/: SocialIcons.astro
website/src/content/docs/: faq.md  index.mdx
website/src/content/docs/advanced/: extending.md  headless-mode.md  scripting.md
website/src/content/docs/auth/: env-vars.md  getting-api-key.md  regions.md
website/src/content/docs/comparison/: vs-claude-code.md  vs-xiaomi-mimo-code.md
website/src/content/docs/concepts/: agent-loop.md  context-window.md  modes.md  sub-agents.md
website/src/content/docs/config/: config-toml.md
website/src/content/docs/en/: faq.md  index.mdx
website/src/content/docs/en/advanced/: extending.md  headless-mode.md  scripting.md
website/src/content/docs/en/auth/: env-vars.md  getting-api-key.md  regions.md
website/src/content/docs/en/comparison/: vs-claude-code.md  vs-xiaomi-mimo-code.md
website/src/content/docs/en/concepts/: agent-loop.md  context-window.md  modes.md  sub-agents.md
website/src/content/docs/en/config/: config-toml.md
website/src/content/docs/en/fallback/: overview.md
website/src/content/docs/en/getting-started/: first-run.md  installation.md  quickstart.md  what-is-mimo-tui.md
website/src/content/docs/en/mcp/: configuring.md  installing.md  overview.md  preset-list.md  writing-server.md
website/src/content/docs/en/migration/: from-claude-code.md
website/src/content/docs/en/reference/: commands.md  config-schema.md  keyboard-shortcuts.md  slash-commands.md
website/src/content/docs/en/sandbox/: overview.md  platforms.md
website/src/content/docs/en/sessions/: managing.md
website/src/content/docs/en/skills/: built-in.md  installing.md  overview.md  sharing.md  writing.md
website/src/content/docs/en/tools/: file-tools.md  git.md  overview.md  search.md  shell.md  task-todo.md  web.md
website/src/content/docs/en/troubleshooting/: api-errors.md  connection.md  performance.md  sandbox.md
website/src/content/docs/en/usage/: cache-optimization.md  dashboard.md
website/src/content/docs/fallback/: overview.md
website/src/content/docs/getting-started/: first-run.md  installation.md  quickstart.md  what-is-mimo-tui.md
website/src/content/docs/mcp/: configuring.md  installing.md  overview.md  preset-list.md  writing-server.md
website/src/content/docs/migration/: from-claude-code.md
website/src/content/docs/reference/: commands.md  config-schema.md  keyboard-shortcuts.md  slash-commands.md
website/src/content/docs/sandbox/: overview.md  platforms.md
website/src/content/docs/sessions/: managing.md
website/src/content/docs/skills/: built-in.md  installing.md  overview.md  sharing.md  writing.md
website/src/content/docs/tools/: file-tools.md  git.md  overview.md  search.md  shell.md  task-todo.md  web.md
website/src/content/docs/troubleshooting/: api-errors.md  connection.md  performance.md  sandbox.md
website/src/content/docs/usage/: cache-optimization.md  dashboard.md
website/src/styles/: brand.css
上线清单/: 01-品牌视觉.md  02-基础设施.md  03-代码仓库.md  04-Rust主项目.md  05-官网搭建.md  06-文档撰写.md  07-CI-CD.md  08-分发渠道.md  09-测试验收.md  10-Demo资产.md  11-发布前自检.md  12-发布日.md  13-发布后运营.md  README.md
品牌/: ascii-logo.txt  colors.md  generate-pngs.sh  preview.html  typography.md
调研/: 01-官方API与生态.md  02-竞品架构对比.md  03-API实测结果.md  04-v0.2开发记录.md
