[package]
name = "mimo-tui-anthropic-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Lightweight Anthropic Messages API client used by mimo-tui"

[dependencies]
reqwest.workspace = true
eventsource-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
