[package]
name = "mimo-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "mimo"
path = "src/main.rs"

[dependencies]
mimo-tui-core.workspace = true
mimo-tui-tools.workspace = true
mimo-tui-anthropic-client.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
async-trait.workspace = true
rustyline = "14"
crossterm = { workspace = true }
