[package]
name = "mimo-tui-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mimo-tui-anthropic-client.workspace = true
mimo-tui-tools.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
directories.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
