[package]
name = "mimo-tui-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full", "process"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }
