[package]
name = "mimo-tui-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
walkdir.workspace = true
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
