[package]
name = "mimo-tui-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mimo-tui-sandbox.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
ignore.workspace = true
regex.workspace = true
async-trait.workspace = true
reqwest.workspace = true
