[package]
name = "mimo-tui-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full", "process"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
ignore.workspace = true
regex.workspace = true
async-trait.workspace = true
reqwest.workspace = true
similar = "2.6"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
