[package]
name = "mimo-tui-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mimo-tui-core.workspace = true
mimo-tui-tools.workspace = true
mimo-tui-anthropic-client.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
unicode-width = "0.2"
